Update .env.template with proper site configuration

--- a/.env.template
+++ b/.env.template
@@ -12,16 +12,16 @@ WORLD_DB_PASS=your_world_password
 # Application Configuration
 PORT=3000
 NODE_ENV=development
-SESSION_SECRET=your_session_secret_here
+SESSION_SECRET=session_secret
 
 # Site Configuration
-SITE_NAME=Your WoW Server
-SITE_URL=https://your-domain.com
-REALM_NAME=Your Realm
+SITE_NAME="xMeta Gaming"
+SITE_URL=https://wow.xmeta.mn
+REALM_NAME="Archimonde"
 REALM_ID=1
 
 # Security Configuration
-JWT_SECRET=your_jwt_secret_here
+JWT_SECRET=jwt_secret
 BCRYPT_ROUNDS=12
 MAX_LOGIN_ATTEMPTS=5
 LOCKOUT_TIME=900000
@@ -29,4 +29,4 @@ LOCKOUT_TIME=900000
 # Features
 ENABLE_REGISTRATION=true
 ENABLE_PASSWORD_RESET=true
-ADMIN_EMAIL=admin@your-domain.com
+ADMIN_EMAIL=admin@xmeta.mn
